--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "learning",
     "app"
   ],
   "author": "sabir",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "esm": "^3.2.25"
+  }
 }
