--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "sabir",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   },
   "dependencies": {
     "esm": "^3.2.25"
